--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 * {
-    font-family: "Roboto", sans-serif;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: -1.5px;
     color: #ffffff;
 }
