--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,5 +5,28 @@
 * {
     font-family: "Montserrat", sans-serif;
     letter-spacing: -1.5px;
-    color: #ffffff;
+    scroll-behavior: smooth;
+    /* color: #ffffff; */
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #5f5f5f;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background: #ffffff99;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #ffffff;
+  }
+  
