--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 * {
-    font-family: "Montserrat", sans-serif;
-    letter-spacing: -1.5px;
+    font-family: "Nunito", sans-serif;
+    letter-spacing: 0px;
     scroll-behavior: smooth;
     /* color: #ffffff; */
 }
@@ -16,17 +16,17 @@
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #5f5f5f;
+    background: #1f1f1f;
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
     border-radius: 6px;
-    background: #ffffff99;
+    background: #5f5f5f;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #ffffff;
+    background: #ffffff90;
   }
   
