fix: hot fix image loading again

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -52,5 +52,5 @@ body{
   }
 
   .loading{
-    background-image: url('src/assets/bg-gradient.png')
+    background-image: url('/src/assets/bg-gradient.png')
   }
