--- a/src/style/index.css
+++ b/src/style/index.css
@@ -50,3 +50,15 @@
   .loading{
     background-image: url('/src/assets/bg-gradient.png')
   }
+
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
