--- a/src/style/index.css
+++ b/src/style/index.css
@@ -81,3 +81,17 @@
         max-width: 650px !important;
     }
   }
+
+  .switch-text{
+    box-shadow: inset 0px 0px 5px 3px rgb(0, 0, 0, .30);
+  }
+
+  .switch-button{
+    box-shadow: inset 0px 0px 3px 2px rgb(0, 0, 0, .30);
+  }
+
+  .switch-button::after{
+    left: 8%;
+    box-shadow: inset -1px -1px 2px -1px rgb(0, 0, 0, 1),
+    inset 1px 1px 2px -1px rgba(255, 255, 255, 1);
+  }
