--- a/src/style/index.css
+++ b/src/style/index.css
@@ -83,11 +83,11 @@
   }
 
   .switch-text{
-    box-shadow: inset 0px 0px 5px 3px rgb(0, 0, 0, .30);
+    box-shadow: inset 0px 0px 5px 3px rgb(0, 0, 0, .20);
   }
 
   .switch-button{
-    box-shadow: inset 0px 0px 3px 2px rgb(0, 0, 0, .30);
+    box-shadow: inset 0px 0px 2px 1px rgb(0, 0, 0, 0.5);
   }
 
   .switch-button::after{
